ExampleApp/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: k8s-php-app
  name: k8s-php-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: k8s-php-app
  type: NodePort
status:
  loadBalancer: {}
