ExampleApp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-php-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8s-php-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-php-app
                port:
                  number: 80
